Fix arrow positioning on smaller screens.

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -237,7 +237,7 @@ ul.photo-gallery p {
 
 #photos .foto_test { 
   float: left;
-  margin: 5px;
+  margin: 5px 7px;
 }
 
 #photos .foto_test img {
@@ -319,13 +319,13 @@ ul.photo-gallery p {
 .title {
    margin:auto;
    text-align: center;
-   padding: 25px 0;
+   padding: 23px 0;
 }
 
 .content {
    width: 960px;
-   height: 580px;
-   min-height: 580px;
+   height: 535px;
+   min-height: 535px;
 }
 
 .containerCenter {
@@ -336,7 +336,7 @@ ul.photo-gallery p {
 
 div.content_area {
   width: 960px;
-  height: 750px;
+  height: 730px;
   margin: auto;
 }
 
